Updated 'facilities.html' via CloudCannon

--- a/facilities.html
+++ b/facilities.html
@@ -25,6 +25,8 @@ base: facilities
   </div>
 </div>
 
+<!-- Removed banner image
+
 <section class="hero-section sub-nav-marg">
   <div class="container hero-container">
     <div class="row hero-row">
@@ -34,6 +36,8 @@ base: facilities
     </div>
   </div>
 </section>
+
+-->
 
 <main class="facilities-container">
   <div class="container">
