Updated 'facilities.html' via CloudCannon

--- a/facilities.html
+++ b/facilities.html
@@ -32,7 +32,10 @@ base: facilities
   <div class="container hero-container">
     <div class="row hero-row">
       <div class="col-md-12">
+          
+          <!--Removed by John
         <img src="{{page.baseurl}}uploads/facilities-banner.jpg" class="img-fluid hero editable" alt="Photo of the George S. Ryan Activities Center" />
+        -->
       </div>
     </div>
   </div>
