Updated 'facilities/sports-facilities/index.html' via CloudCannon

--- a/facilities/sports-facilities/index.html
+++ b/facilities/sports-facilities/index.html
@@ -4,6 +4,7 @@ baseurl: ../../
 base: facilities
 title: Sports Facilities
 ---
+
 <!-- Facilities-specific sub-nav -->
 <div class="container-fluid sub-nav">
   <div class="row filler">&#160;</div>
@@ -34,7 +35,7 @@ title: Sports Facilities
   <div class="container">
     <div class="row row-marg">
       <div class="col-md-4">
-          <img class="img-fluid img-radius" src="{{page.baseurl}}uploads/gymnasium.jpg" alt="Photo of the George S. Ryan Activities Center">
+          <img class="img-fluid img-radius" src="{{page.baseurl}}uploads/gymnasium.jpg" alt="Photo of the George S. Ryan Activities Center" />
       </div>
       <div class="col-md-8">
         <h2 id="gym" class="blue-heading link__offset">George S. Ryan Activities Center</h2>
@@ -44,7 +45,7 @@ title: Sports Facilities
     </div>
     <div class="row row-marg">
       <div class="col-md-4">
-          <img class="img-fluid img-radius" src="{{page.baseurl}}uploads/aerial-baseball-field.jpg" alt="Aerial Photograph of KCC's baseball field">
+          <img class="img-fluid img-radius" src="{{page.baseurl}}uploads/aerial-baseball-field.jpg" alt="Aerial Photograph of KCC's baseball field" />
       </div>
       <div class="col-md-8">
         <h2 id="baseball-field" class="blue-heading link__offset">Baseball Field</h2>
@@ -54,7 +55,7 @@ title: Sports Facilities
     </div>
     <div class="row row-marg">
       <div class="col-md-4">
-          <img class="img-fluid img-radius" src="{{page.baseurl}}uploads/aerial-softball-field.jpg" alt="Aerial Photograph of KCC's softball field">
+          <img class="img-fluid img-radius" src="{{page.baseurl}}uploads/aerial-softball-field.jpg" alt="Aerial Photograph of KCC's softball field" />
       </div>
       <div class="col-md-8">
         <h2 id="softball-field" class="blue-heading link__offset">Softball Field</h2>
@@ -66,11 +67,13 @@ title: Sports Facilities
     </div>
     <div class="row row-marg">
       <div class="col-md-4">
-          <img class="img-fluid img-radius" src="{{page.baseurl}}uploads/soccer-field.jpg" alt="Photo of KCC's soccer field">
+          <img class="img-fluid img-radius" src="{{page.baseurl}}uploads/soccer-field.jpg" alt="Photo of KCC's soccer field" />
       </div>
       <div class="col-md-8">
         <h2 id="soccer-field" class="blue-heading link__offset">Soccer Field</h2>
-        <p class="editable">Need copy for soccer field</p>
+        <p class="editable">
+            
+        </p>
       </div>
     </div>
   </div>
