Updated 'facilities.html' via CloudCannon

--- a/facilities.html
+++ b/facilities.html
@@ -59,7 +59,7 @@ base: facilities
       </div>
       <div class="col-md-8 facilities__text-margin">
         <p class="editable">
-            The KCC Riverfront Campus is located on 178 acres along the tree-lined banks of the Kankakee River.&nbsp; Click on a link below to learn more about our athletics facilities.
+            The KCC Riverfront Campus is located on 178 acres along the tree-lined banks of the Kankakee River.&nbsp; Click on a link below to learn more about our sports facilities.
         </p>
         <a href="{{site.baseurl}}/facilities/sports-facilities#gym" class="blue-link">George S. Ryan Gymnasium</a><br />
         <a href="{{site.baseurl}}/facilities/sports-facilities#baseball-field" class="blue-link">Baseball Field</a><br />
