Updated 'facilities/fitness-center/index.html' via CloudCannon

--- a/facilities/fitness-center/index.html
+++ b/facilities/fitness-center/index.html
@@ -45,8 +45,8 @@ title: Fitness Center
       <div class="col-md-12">
 
         <div class="editable">
-            <p>The KCC Fitness Center offers total body fitness to KCC students as well as members of the community. The 3,500 square-foot facility features state-of-the-art equipment from Life Fitness, the No. 1 brand of fitness equipment in health clubs worldwide, offering a full range of training options.</p>
-            <p>Monthly and annual membership packages are available for individuals, families and couples. KCC students can enroll for college credit. KCC&rsquo;s athletes also use the center as part of their training. For more information, phone 815-802-8610.</p>
+            <p><strong>The KCC Fitness Center offers total body fitness to KCC students as well as members of the community. The 3,500 square-foot facility features state-of-the-art equipment from Life Fitness, the No. 1 brand of fitness equipment in health clubs worldwide, offering a full range of training options.</strong></p>
+            <p><strong>Monthly and annual membership packages are available for individuals, families and couples. KCC students can enroll for college credit. KCC&rsquo;s athletes also use the center as part of their training. For more information, phone 815-802-8610.</strong></p>
             <p>&nbsp;</p>
             <h2 id="membership" class="blue-heading link__offset">Become a Member</h2>
             <p>Sign up at KCC's Accounting Office (second floor of the college) and at the Fitness Center, located in the Ice Valley Centre at 1601 River Road, Kankakee.</p>
