Updated 'facilities/fitness-center/index.html' via CloudCannon

--- a/facilities/fitness-center/index.html
+++ b/facilities/fitness-center/index.html
@@ -19,7 +19,7 @@ title: Fitness Center
           <a href="{{page.baseurl}}{{page.base}}/fitness-center#membership" class="nav-link sub-nav-link">Membership</a>
         </li>
         <li class="nav-item">
-          <a href="{{page.baseurl}}{{page.base}}/fitness-center#personal-trainers" class="nav-link sub-nav-link">Personal Trainers</a>
+          <a href="{{page.baseurl}}{{page.base}}/fitness-center#personal-trainers" class="nav-link sub-nav-link">Personal Trainers & Staff</a>
         </li>
         <li class="nav-item">
           <a href="{{page.baseurl}}{{page.base}}/fitness-center#testimonials" class="nav-link sub-nav-link">Testimonials</a>
