Updated 'facilities/fitness-center/index.html' via CloudCannon

--- a/facilities/fitness-center/index.html
+++ b/facilities/fitness-center/index.html
@@ -77,37 +77,28 @@ title: Fitness Center
             <p>Questions/Appointments</p>
             <p>Contact Yvonne Mills, personal trainer manager</p>
             <p><strong>Staff</strong></p>
+            <p><img src="/uploads/dsc-0659yvonne-mills.jpg" width="200" height="250" /></p>
             <p><strong>Yvonne Mills </strong>&nbsp;</p>
             <p>An ACE certified personal trainer and sports conditioning specialist, Yvonne has been making fitness fun for more than 20 years. Yvonne's experience includes: strength training, teaching aerobics, teaching kickboxing, and working as a personal and group trainer. She holds a black belt in Tang Soo Do and has competed in powerlifting and bodybuilding competitions.</p>
             <p>Yvonne earned a bachelor&rsquo;s degree in physical education from Olivet Nazarene University.</p>
-            <p>815-802-8610</p>
-            <p>ymills@kcc.edu</p>
-            <p>Fitness specialists</p>
-            <p>​</p>
-            <p><strong>​Candice Brackett</strong></p>
-            <p>Fitness specialist, athletic trainer</p>
-            <p>815-802-8610</p>
-            <p>cbrackett@kcc.edu</p>
+            <p>815-802-8610<br />ymills@kcc.edu</p>
             <p>&nbsp;</p>
+            <p>Fitness specialists</p>
+            <p><img src="/uploads/candice-brackett-bio-page-2.jpg" width="120" height="140" /></p>
+            <p><strong>​Candice Brackett</strong></p>
+            <p>Fitness specialist, athletic trainer<br />815-802-8610<br />cbrackett@kcc.edu</p>
+            <p>&nbsp;</p>
+            <p><img src="/uploads/dsc-0248-francine.jpg" width="120" height="142" /></p>
             <p><strong>Francine Castongia</strong></p>
-            <p>Fitness specialist</p>
-            <p>815-802-8610</p>
-            <p>fcastongia@kcc.edu</p>
+            <p>Fitness specialist<br />815-802-8610<br />fcastongia@kcc.edu</p>
             <p>&nbsp;</p>
             <h2 id="testimonials" class="blue-heading link__offset">Testimonials</h2>
-            <p>Get inspired!</p>
-            <p>&nbsp;</p>
             <p>Read how our members reached their fitness goals at KCC's comfortable and well-equipped fitness center with the help of our knowledgeable, supportive personal trainers. &nbsp;</p>
-            <p>Lamanda Garcia</p>
-            <p><em>&ldquo;Yvonne was an amazing coach. She pushed me each class.&rdquo;</em></p>
-            <p>Donna Schmidt</p>
-            <p><em>&ldquo;I have lost inches, gained muscle mass and become much stronger with LESS aches and pain.&rdquo;</em></p>
-            <p>Carolyn Jacobson</p>
-            <p><em>&ldquo;...We know that having a safe and effective work-out propels you into a fuller and more rewarding life. And this is exactly what using KCC&rsquo;s Fitness Center and working with Yvonne have done for me. &rdquo;</em></p>
-            <p>John Kessler</p>
-            <p><em>&ldquo;After three months, I could tell that things were improving. After six months I feel stronger, my balance has improved and I've lost some weight.&rdquo;</em></p>
-            <p>Mike Wickliff</p>
-            <p><em>&ldquo;I recommend any athlete or person, to sign up for training sessions with Ms. Yvonne. I guarantee you will get better in the area you are trying to improve.&rdquo;</em></p>
+            <p>Lamanda Garcia<em><br />&ldquo;Yvonne was an amazing coach. She pushed me each class.&rdquo;</em></p>
+            <p>Donna Schmidt<em><br />&ldquo;I have lost inches, gained muscle mass and become much stronger with LESS aches and pain.&rdquo;</em></p>
+            <p>Carolyn Jacobson<em><br />&ldquo;...We know that having a safe and effective work-out propels you into a fuller and more rewarding life. And this is exactly what using KCC&rsquo;s Fitness Center and working with Yvonne have done for me. &rdquo;</em></p>
+            <p>John Kessler<em><br />&ldquo;After three months, I could tell that things were improving. After six months I feel stronger, my balance has improved and I've lost some weight.&rdquo;</em></p>
+            <p>Mike Wickliff<em><br />&ldquo;I recommend any athlete or person, to sign up for training sessions with Ms. Yvonne. I guarantee you will get better in the area you are trying to improve.&rdquo;</em></p>
             <p>&nbsp;</p>
         </div>
       </div>
