Updated 'facilities/fitness-center/index.html' via CloudCannon

--- a/facilities/fitness-center/index.html
+++ b/facilities/fitness-center/index.html
@@ -113,7 +113,16 @@ title: Fitness Center
             <p>KCC students can choose to:</p>
             <p>sign up as a member</p>
             <p>enroll in the fitness center course and earn college credit</p>
-            <p>&nbsp;
+            <
+            <table class="mv-Table-6" bordercolor="#808080" border="1" cellspacing="0" cellpadding="3"><tbody><tr class="mv-TableHeaderRow-6"><th class="mv-TableHeaderEvenCol-6" rowspan="1" colspan="1">Option<span>​</span><span>​</span></th>
+<th class="mv-TableHeaderOddCol-6" rowspan="1" colspan="1">Spring or Fall</th>
+<th class="mv-TableHeaderEvenCol-6" rowspan="1" colspan="1"> Summer</th></tr>
+<tr class="mv-TableOddRow-6"><td class="mv-TableEvenCol-6">KCC students (as member)</td>
+<td align="center" class="mv-TableOddCol-6" valign="middle">$80 </td>
+<td align="center" class="mv-TableEvenCol-6" valign="middle">$40 </td></tr>
+<tr class="mv-TableEvenRow-6"><td class="mv-TableEvenCol-6">KCC students (as course enrollee)</td>
+<td align="center" class="mv-TableOddCol-6" valign="middle"><p> current tuition rate<br />for 1 credit hour<br />+ $20 fee</p></td>
+<td align="center" class="mv-TableEvenCol-6" valign="middle">current tuition rate<br />for 1 credit hour<br />+ $20 fee</td></tr></tbody></table>
                 </p><p>Review details about enrolling in the Fitness Center for College Credit to decide which option fits your needs best.</p>
             <p></p>
             <p>&nbsp;</p>
