Updated 'facilities/fitness-center/index.html' via CloudCannon

--- a/facilities/fitness-center/index.html
+++ b/facilities/fitness-center/index.html
@@ -46,13 +46,13 @@ title: Fitness Center
       <div class="col-md-12">
 
         <div class="editable">
-            <p><strong>The KCC Fitness Center offers total body fitness to KCC students as well as members of the community. The 3,500 square-foot facility features state-of-the-art equipment from Life Fitness, the No. 1 brand of fitness equipment in health clubs worldwide, offering a full range of training options.</strong></p>
-            <p><strong>Monthly and annual membership packages are available for individuals, families and couples. KCC students can enroll for college credit. KCC&rsquo;s athletes also use the center as part of their training. For more information, phone 815-802-8610.</strong></p>
+            <p>The KCC Fitness Center offers total body fitness to KCC students as well as members of the community. The 3,500 square-foot facility features state-of-the-art equipment from Life Fitness, the No. 1 brand of fitness equipment in health clubs worldwide, offering a full range of training options.</p>
+            <p>Monthly and annual membership packages are available for individuals, families and couples. KCC students can enroll for college credit. KCC&rsquo;s athletes also use the center as part of their training. For more information, phone 815-802-8610.</p>
             <p>&nbsp;</p>
-            <h2 id="membership" class="blue-heading link__offset">Become a Member</h2>
+            <h3 id="membership" class="blue-heading link__offset">Become a Member</h3>
             <p>Sign up at KCC's Accounting Office (second floor of the college) and at the Fitness Center, located in the Ice Valley Centre at 1601 River Road, Kankakee.</p>
-            <p>&nbsp;</p>
-            <p><strong>Membership Options</strong></p>
+            <h2>&nbsp;</h2>
+            <h5><strong>Membership Options</strong></h5>
             <p>KCC offers the following membership packages to non-student members of the community.</p>
             <table class="mv-Table-6" cellspacing="0" cellpadding="3" bordercolor="#808080" border="1">
                 <tbody>
@@ -113,27 +113,38 @@ title: Fitness Center
             <p>KCC students can choose to:</p>
             <p>sign up as a member</p>
             <p>enroll in the fitness center course and earn college credit</p>
-            <
-            <table class="mv-Table-6" bordercolor="#808080" border="1" cellspacing="0" cellpadding="3"><tbody><tr class="mv-TableHeaderRow-6"><th class="mv-TableHeaderEvenCol-6" rowspan="1" colspan="1">Option<span>​</span><span>​</span></th>
-<th class="mv-TableHeaderOddCol-6" rowspan="1" colspan="1">Spring or Fall</th>
-<th class="mv-TableHeaderEvenCol-6" rowspan="1" colspan="1"> Summer</th></tr>
-<tr class="mv-TableOddRow-6"><td class="mv-TableEvenCol-6">KCC students (as member)</td>
-<td align="center" class="mv-TableOddCol-6" valign="middle">$80 </td>
-<td align="center" class="mv-TableEvenCol-6" valign="middle">$40 </td></tr>
-<tr class="mv-TableEvenRow-6"><td class="mv-TableEvenCol-6">KCC students (as course enrollee)</td>
-<td align="center" class="mv-TableOddCol-6" valign="middle"><p> current tuition rate<br />for 1 credit hour<br />+ $20 fee</p></td>
-<td align="center" class="mv-TableEvenCol-6" valign="middle">current tuition rate<br />for 1 credit hour<br />+ $20 fee</td></tr></tbody></table>
-                </p><p>Review details about enrolling in the Fitness Center for College Credit to decide which option fits your needs best.</p>
-            <p></p>
+            <table class="mv-Table-6" cellspacing="0" cellpadding="3" bordercolor="#808080" border="1">
+                <tbody>
+                    <tr class="mv-TableHeaderRow-6">
+                        <th class="mv-TableHeaderEvenCol-6" rowspan="1" colspan="1">Option<span>​</span><span>​</span></th>
+                        <th class="mv-TableHeaderOddCol-6" rowspan="1" colspan="1">Spring or Fall</th>
+                        <th class="mv-TableHeaderEvenCol-6" rowspan="1" colspan="1">Summer</th>
+                    </tr>
+                    <tr class="mv-TableOddRow-6">
+                        <td class="mv-TableEvenCol-6">KCC students (as member)</td>
+                        <td class="mv-TableOddCol-6" valign="middle" align="center">$80</td>
+                        <td class="mv-TableEvenCol-6" valign="middle" align="center">$40</td>
+                    </tr>
+                    <tr class="mv-TableEvenRow-6">
+                        <td class="mv-TableEvenCol-6">KCC students (as course enrollee)</td>
+                        <td class="mv-TableOddCol-6" valign="middle" align="center">
+                            <p>current tuition rate<br />for 1 credit hour<br />+ $20 fee</p>
+                        </td>
+                        <td class="mv-TableEvenCol-6" valign="middle" align="center">current tuition rate<br />for 1 credit hour<br />+ $20 fee</td>
+                    </tr>
+                </tbody>
+            </table>
+            <p>&nbsp;</p>
+            <p>Review details about enrolling in the Fitness Center for College Credit to decide which option fits your needs best.</p>
             <p>&nbsp;</p>
             <h2 id="personal-trainers" class="blue-heading link__offset">Personal Trainers and Staff</h2>
             <p>Our personal trainers can help you reach your fitness goals. In addition to being certified professionals and/or having the appropriate degrees, our trainers stay current with the latest fitness trends and training techniques.</p>
-            <p>&nbsp;</p>
-            <p>Rates</p>
+            <p><img src="/uploads/dsc-0173-home.jpg" width="655" height="250" /></p>
+            <h5>Rates</h5>
             <p>Training sessions are one hour. You will have an initial consultation to discuss specific fitness goals. Up to three people can participate in a session. Rates are:</p>
             <p>ADD TABLE RATES</p>
             <p>&nbsp;</p>
-            <p><strong>Why personal training?</strong></p>
+            <h5><strong>Why Personal Training?</strong></h5>
             <p>Using a personal trainer will help you maximize your time and effort at the gym, giving you tremendous value.</p>
             <ul>
                 <li>Reach your fitness goals faster</li>
@@ -141,11 +152,11 @@ title: Fitness Center
                 <li>Keep your workouts fresh and motivating</li>
                 <li>Save time with a thorough, pre-planned workout</li>
             </ul>
-            <p><strong>Fitness Assessment</strong></p>
+            <h5><strong>Fitness Assessment</strong></h5>
             <p>A fitness assessment evaluates physical fitness components such as height, weight, body fat composition, resting heart rate, balance, muscle strength and endurance. Cost is $35.</p>
             <p>Questions/Appointments</p>
             <p>Contact Yvonne Mills, personal trainer manager</p>
-            <p><strong>Staff</strong></p>
+            <h5><strong>Staff</strong></h5>
             <p><img width="200" height="250" src="/uploads/dsc-0659yvonne-mills.jpg" /></p>
             <p><strong>Yvonne Mills </strong>&nbsp;</p>
             <p>An ACE certified personal trainer and sports conditioning specialist, Yvonne has been making fitness fun for more than 20 years. Yvonne's experience includes: strength training, teaching aerobics, teaching kickboxing, and working as a personal and group trainer. She holds a black belt in Tang Soo Do and has competed in powerlifting and bodybuilding competitions.</p>
