--- a/facilities/fitness-center/index.html
+++ b/facilities/fitness-center/index.html
@@ -142,6 +142,23 @@ title: Fitness Center
             <p><img src="/uploads/dsc-0173-home.jpg" width="655" height="250" /></p>
             <h5>Rates</h5>
             <p>Training sessions are one hour. You will have an initial consultation to discuss specific fitness goals. Up to three people can participate in a session. Rates are:</p>
+            
+            <table width="100%" class="mv-Table-6" cellspacing="0" style="font-size:1em"><tbody><tr class="mv-TableHeaderRow-6"><th class="mv-TableHeaderEvenCol-6" rowspan="1" colspan="1">​No. of Persons</th>
+<th class="mv-TableHeaderOddCol-6" rowspan="1" colspan="1">​1 session</th>
+<th class="mv-TableHeaderEvenCol-6" rowspan="1" colspan="1">​5 sessions</th>
+<th class="mv-TableHeaderOddCol-6" rowspan="1" colspan="1">​10 sessions</th></tr>
+<tr class="mv-TableOddRow-6"><td class="mv-TableEvenCol-6" rowspan="1" colspan="1">​1</td>
+<td class="mv-TableOddCol-6">​$30</td>
+<td class="mv-TableEvenCol-6">$135​</td>
+<td class="mv-TableOddCol-6" colspan="1">$260​</td></tr>
+<tr class="mv-TableEvenRow-6"><td class="mv-TableEvenCol-6" rowspan="1" colspan="1">​2</td>
+<td class="mv-TableOddCol-6">​$25/person</td>
+<td class="mv-TableEvenCol-6">$110/person​</td>
+<td class="mv-TableOddCol-6" colspan="1">​$210/person</td></tr>
+<tr class="mv-TableOddRow-6"><td class="mv-TableEvenCol-6" rowspan="1" colspan="1">​3</td>
+<td class="mv-TableOddCol-6">​$20/person</td>
+<td class="mv-TableEvenCol-6">​$85/person</td>
+<td class="mv-TableOddCol-6" colspan="1">​$160/person</td></tr></tbody></table>
             <p>&nbsp;</p>
             <h5><strong>Why Personal Training?</strong></h5>
             <p>Using a personal trainer will help you maximize your time and effort at the gym, giving you tremendous value.</p>
