Updated 'recruitment.html' via CloudCannon

--- a/recruitment.html
+++ b/recruitment.html
@@ -3,35 +3,48 @@ layout: page
 baseurl: ../
 title: Recruitment
 ---
+
 <!-- Recruitment Content -->
 <section class="recruit-section">
   <div class="container editable">
-    <div class="row row-space">
-        <div class="col-md-12 editable"></div>
-    </div>
-    <div class="row row-space">
-      <div class="col-md-4"><h2>Baseball</h2></div>
-        <div class="col-md-8"><a href="https://form.jotform.com/72396568714974" class="btn btn-primary btn-marg-left">Recruitment form</a></div>
-    </div>
-    <div class="row row-space">
-      <div class="col-md-4"><h2>Men's Basketball</h2></div>
-        <div class="col-md-8"><a href="https://form.jotform.com/72495899814982" class="btn btn-primary btn-marg-left">Recruitment form</a></div>
-    </div>
-    <div class="row row-space">
-      <div class="col-md-4"><h2>Women's Basketball</h2></div>
-        <div class="col-md-8"><a href="https://form.jotform.com/72536200679963" class="btn btn-primary btn-marg-left">Recruitment form</a></div>
-    </div>
-    <div class="row row-space">
-      <div class="col-md-4"><h2>Soccer</h2></div>
-        <div class="col-md-8"><a href="https://form.jotform.com/72476618714969" class="btn btn-primary btn-marg-left">Recruitment form</a></div>
-    </div>
-    <div class="row row-space">
-      <div class="col-md-4"><h2>Softball</h2></div>
-        <div class="col-md-8"><a href="https://form.jotform.com/72396278214967" class="btn btn-primary btn-marg-left">Recruitment form</a></div>
-    </div>
-    <div class="row row-space">
-      <div class="col-md-4"><h2>Volleyball</h2></div>
-        <div class="col-md-8"><a href="https://form.jotform.com/72396296514970" class="btn btn-primary btn-marg-left">Recruitment form</a></div>
-    </div>
+      <div class="row row-space">
+          <div class="col-md-12">Select a recruitment form below:</div>
+      </div>
+      <div class="row row-space">
+          <div class="col-md-4">
+              <h3>Baseball</h3>
+          </div>
+          <div class="col-md-8"><a class="btn btn-primary btn-marg-left" href="https://form.jotform.com/72396568714974">Recruitment form</a></div>
+      </div>
+      <div class="row row-space">
+          <div class="col-md-4">
+              <h3>Men's Basketball</h3>
+          </div>
+          <div class="col-md-8"><a class="btn btn-primary btn-marg-left" href="https://form.jotform.com/72495899814982">Recruitment form</a></div>
+      </div>
+      <div class="row row-space">
+          <div class="col-md-4">
+              <h3>Women's Basketball</h3>
+          </div>
+          <div class="col-md-8"><a class="btn btn-primary btn-marg-left" href="https://form.jotform.com/72536200679963">Recruitment form</a></div>
+      </div>
+      <div class="row row-space">
+          <div class="col-md-4">
+              <h3>Soccer</h3>
+          </div>
+          <div class="col-md-8"><a class="btn btn-primary btn-marg-left" href="https://form.jotform.com/72476618714969">Recruitment form</a></div>
+      </div>
+      <div class="row row-space">
+          <div class="col-md-4">
+              <h3>Softball</h3>
+          </div>
+          <div class="col-md-8"><a class="btn btn-primary btn-marg-left" href="https://form.jotform.com/72396278214967">Recruitment form</a></div>
+      </div>
+      <div class="row row-space">
+          <div class="col-md-4">
+              <h3>Volleyball</h3>
+          </div>
+          <div class="col-md-8"><a class="btn btn-primary btn-marg-left" href="https://form.jotform.com/72396296514970">Recruitment form</a></div>
+      </div>
   </div>
 </section>
