--- a/recruitment.html
+++ b/recruitment.html
@@ -14,37 +14,37 @@ title: Recruitment
           <div class="col-md-4">
               <h3>Baseball</h3>
           </div>
-          <div class="col-md-8"><a class="btn btn-primary btn-marg-left" href="https://form.jotform.com/72396568714974">Recruitment form</a></div>
+          <div class="col-md-8"><a class="btn btn-primary btn-marg-left" href="https://form.jotform.com/72396568714974">Baseball Recruitment form</a></div>
       </div>
       <div class="row row-space">
           <div class="col-md-4">
               <h3>Men's Basketball</h3>
           </div>
-          <div class="col-md-8"><a class="btn btn-primary btn-marg-left" href="https://form.jotform.com/72495899814982">Recruitment form</a></div>
+          <div class="col-md-8"><a class="btn btn-primary btn-marg-left" href="https://form.jotform.com/72495899814982">Men's Basketball Recruitment form</a></div>
       </div>
       <div class="row row-space">
           <div class="col-md-4">
               <h3>Women's Basketball</h3>
           </div>
-          <div class="col-md-8"><a class="btn btn-primary btn-marg-left" href="https://form.jotform.com/72536200679963">Recruitment form</a></div>
+          <div class="col-md-8"><a class="btn btn-primary btn-marg-left" href="https://form.jotform.com/72536200679963">Women's Basketball Recruitment form</a></div>
       </div>
       <div class="row row-space">
           <div class="col-md-4">
               <h3>Soccer</h3>
           </div>
-          <div class="col-md-8"><a class="btn btn-primary btn-marg-left" href="https://form.jotform.com/72476618714969">Recruitment form</a></div>
+          <div class="col-md-8"><a class="btn btn-primary btn-marg-left" href="https://form.jotform.com/72476618714969">Soccer Recruitment form</a></div>
       </div>
       <div class="row row-space">
           <div class="col-md-4">
               <h3>Softball</h3>
           </div>
-          <div class="col-md-8"><a class="btn btn-primary btn-marg-left" href="https://form.jotform.com/72396278214967">Recruitment form</a></div>
+          <div class="col-md-8"><a class="btn btn-primary btn-marg-left" href="https://form.jotform.com/72396278214967">Softball Recruitment form</a></div>
       </div>
       <div class="row row-space">
           <div class="col-md-4">
               <h3>Volleyball</h3>
           </div>
-          <div class="col-md-8"><a class="btn btn-primary btn-marg-left" href="https://form.jotform.com/72396296514970">Recruitment form</a></div>
+          <div class="col-md-8"><a class="btn btn-primary btn-marg-left" href="https://form.jotform.com/72396296514970">Volleyball Recruitment form</a></div>
       </div>
   </div>
 </section>
