Updated 'recruitment.html' via CloudCannon

--- a/recruitment.html
+++ b/recruitment.html
@@ -8,42 +8,26 @@ title: Recruitment
 <section class="recruit-section">
   <div class="container editable">
       <div class="row row-space">
-          <div class="col-md-12">Select a recruitment form below:</div>
+          <h4 class="col-md-12">Please select a recruitment form below:</h4>
       </div>
       <div class="row row-space">
-          <div class="col-md-4">
-              <h3>Baseball</h3>
-          </div>
           <div class="col-md-8"><a class="btn btn-primary btn-marg-left" href="https://form.jotform.com/72396568714974">Baseball Recruitment form</a></div>
       </div>
       <div class="row row-space">
-          <div class="col-md-4">
-              <h3>Men's Basketball</h3>
-          </div>
           <div class="col-md-8"><a class="btn btn-primary btn-marg-left" href="https://form.jotform.com/72495899814982">Men's Basketball Recruitment form</a></div>
       </div>
       <div class="row row-space">
-          <div class="col-md-4">
-              <h3>Women's Basketball</h3>
-          </div>
           <div class="col-md-8"><a class="btn btn-primary btn-marg-left" href="https://form.jotform.com/72536200679963">Women's Basketball Recruitment form</a></div>
       </div>
       <div class="row row-space">
-          <div class="col-md-4">
-              <h3>Soccer</h3>
-          </div>
           <div class="col-md-8"><a class="btn btn-primary btn-marg-left" href="https://form.jotform.com/72476618714969">Soccer Recruitment form</a></div>
       </div>
       <div class="row row-space">
           <div class="col-md-4">
-              <h3>Softball</h3>
+              <h3><a class="btn btn-primary btn-marg-left" href="https://form.jotform.com/72396278214967">Softball Recruitment form</a></h3>
           </div>
-          <div class="col-md-8"><a class="btn btn-primary btn-marg-left" href="https://form.jotform.com/72396278214967">Softball Recruitment form</a></div>
       </div>
       <div class="row row-space">
-          <div class="col-md-4">
-              <h3>Volleyball</h3>
-          </div>
           <div class="col-md-8"><a class="btn btn-primary btn-marg-left" href="https://form.jotform.com/72396296514970">Volleyball Recruitment form</a></div>
       </div>
   </div>
