Updated 'support.html' via CloudCannon

--- a/support.html
+++ b/support.html
@@ -30,7 +30,7 @@ title: Support Athletics
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="main-heading editable"><strong>Support KCC Athletics</strong></h2>
+        <h2 class="blue-heading editable"><strong>Support KCC Athletics</strong></h2>
         <div class="editable">
             <p>The Kankakee Community College Athletics programs give students the opportunity to develop athletic skills at the same time they pursue academic success. This establishes a foundation of physical and mental well-being that student-athletes can build on for a lifetime.</p>
             <p>You can make a difference in a student-athlete's life with your generous contribution to KCC Athletics. Your donation will help keep these opportunities open, giving our student athletes their best chance to achieve athletic and academic success.</p>
