Updated 'mens-basketball.html' via CloudCannon

--- a/mens-basketball.html
+++ b/mens-basketball.html
@@ -151,7 +151,7 @@ slides:
         <!-- Coach 1 row -->
         <div class="row">
           <!-- Coach 1 left image div (inner-left column) -->
-          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img alt="Photo of Alex Thorson" class="img-fluid coach-img modal-link editable" src="/uploads/blank-male-avatar-1.jpg" title="Photo of Alex Thorson" width="300" height="400" /></a></div>
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img alt="Photo of Alex Thorson" class="img-fluid coach-img modal-link editable" title="Photo of Alex Thorson" src="/uploads/athorson.jpg" width="300" height="400" /></a></div>
           <!-- Coach 1 right info div (inner-right column) -->
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name editable">Alex Thorson</h5>
