Updated 'mens-basketball.html' via CloudCannon

--- a/mens-basketball.html
+++ b/mens-basketball.html
@@ -157,8 +157,7 @@ slides:
             <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name editable">Alex Thorson</h5>
             <h6 class="coach-title editable">Head Coach</h6></a>
             <p class="editable">
-              815&#8209;802&#8209;8609<br />
-              athorson@kcc.edu
+                815‑802‑8609<br />athorson@kcc.edu
             </p>
             <a data-toggle="modal" class="btn btn-primary" href="#modalCoach1">View Bio</a>
           </div>
