--- a/support.html
+++ b/support.html
@@ -35,7 +35,7 @@ title: Support Athletics
             <p>The Kankakee Community College Athletics programs give students the opportunity to develop athletic skills at the same time they pursue academic success. This establishes a foundation of physical and mental well-being that student-athletes can build on for a lifetime.</p>
             <p>You can make a difference in a student-athlete's life with your generous contribution to KCC Athletics. Your donation will help keep these opportunities open, giving our student athletes their best chance to achieve athletic and academic success.</p>
             <p>There are a variety of ways you can contribute:</p>
-            <p>Cash Bash<br />Cavalier Club</p>
+            <p><a href="/support/cash-bash/">Cash Bash</a><br /><a href="/support/cavalier-club/">Cavalier Club</a></p>
         </div>
       
       <!--
