Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@ slides:
     url: 'http://athletics.kcc.edu/womens-basketball'
     text1: Women's Basketball
     text2: KCC Women's Basketball <br>vs Joliet Junior College
-  - image: uploads/header-bg3.jpg
+  - image: /uploads/soccer-team_D51_3818.jpg
     alt-text:
     url: 'http://athletics.kcc.edu/soccer'
     text1: Soccer
     text2: KCC Cavaliers Soccer <br>vs Joliet Junior College
-  - image: uploads/softball-slide-5_D51_3077.jpg
+  - image: '/uploads/#15 D3S_9915.JPG'
     alt-text:
     url: 'http://athletics.kcc.edu/softball'
     text1: Softball
@@ -29,7 +29,7 @@ slides:
     url: 'http://athletics.kcc.edu/volleyball'
     text1: Volleyball
     text2: KCC Volleyball vs <br>Olivet Nazarene
-  - image: uploads/basketball-slide-4_DSC_3172.jpg
+  - image: /uploads/DSC_2869.jpg
     alt-text:
     url: 'http://athletics.kcc.edu/mens-basketball'
     text1: Men's Basketball
