Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ slides:
   - image: uploads/header-bg2.jpg
     alt-text: Baseball Championship
     url: 'http://athletics.kcc.edu/baseball'
-    text1: TESTBaseball Championship 2017
+    text1: Baseball Championship 2017
     text2: '2017 NJCAA DIVISION II NATIONAL&#160;CHAMPIONS'
   - image: uploads/header-bg.jpg
     alt-text:
@@ -18,12 +18,12 @@ slides:
     alt-text:
     url: 'http://athletics.kcc.edu/soccer'
     text1: Soccer
-    text2: KCC Cavaliers Soccer <br>vs Joliet Junior College
+    text2: 2017 KCC Cavaliers Soccer
   - image: '/uploads/#15 D3S_9915.JPG'
     alt-text:
     url: 'http://athletics.kcc.edu/softball'
     text1: Softball
-    text2: 'KCC Softball 2018 team <br>Lindsey Andrews &#35;11'
+    text2: 'KCC Softball 2018 team <br>Jenna Arseneau &#15;11'
   - image: uploads/volleyball-slide-3_D4S_6473.jpg
     alt-text:
     url: 'http://athletics.kcc.edu/volleyball'
