Updated 'softball.html' via CloudCannon

--- a/softball.html
+++ b/softball.html
@@ -24,12 +24,12 @@ slides:
     alt-text:
     url: '#'
     text1: Catcher
-    text2: Lady Cavalier
-  - image: uploads/softball-slide-5_D51_3077.jpg
+    text2: Morgan Charters
+  - image: '/uploads/#15 D3S_9915.JPG'
     alt-text:
     url: '#'
-    text1:
-    text2:
+    text1: Lady Cavalier
+    text2: Jenna Arseneau
 ---
 
 <div class="container slider-container sub-nav-marg">
