Updated 'baseball.html' via CloudCannon

--- a/baseball.html
+++ b/baseball.html
@@ -12,7 +12,7 @@ slides:
     url: 'http://www.kcc.edu'
     text1: 'June 6, 2017 | Baseball'
     text2: 2017 NJCAA DIVISION II <br>NATIONAL CHAMPIONS
-  - image: /uploads/DSC_1315.jpg
+  - image: /uploads/coachburciaga.jpg
     alt-text:
     url: '#'
     text1:
