Updated 'mens-basketball.html' via CloudCannon

--- a/mens-basketball.html
+++ b/mens-basketball.html
@@ -1,35 +1,35 @@
 ---
 layout: sub-nav-landing-fb
 baseurl: ../
-title: "Men's Basketball"
+title: Men's Basketball
 base: mens-basketball
 sport: 7
 slides:
   - image: uploads/basketball-team_D51_4006.jpg
-    alt-text: ""
+    alt-text:
     url: '#'
-    text1: Apply here
-    text2: Ipsum Lorem
+    text1: 2017-2018
+    text2: Men's Basketball
   - image: uploads/basketball-slide-5_DSC_2602.jpg
-    alt-text: ""
+    alt-text:
     url: '#'
-    text1: Apply here
-    text2: Ipsum Lorem
-  - image: uploads/basketball-slide-4_DSC_3172.jpg
-    alt-text: ""
+    text1: Sophomore
+    text2: 'Curtis Dilworth, Jr'
+  - image: /uploads/theoowens.jpg
+    alt-text:
     url: '#'
-    text1: Apply here
-    text2: Ipsum Lorem
+    text1: Freshman
+    text2: Theo Owens
   - image: uploads/basketball-slide-3_DSC_2595.jpg
-    alt-text: ""
+    alt-text:
     url: '#'
     text1: Apply here
     text2: Ipsum Lorem
-  - image: uploads/basketball-3_DSC_2889.jpg
-    alt-text: ""
+  - image: /uploads/curtisdilworth2.jpg
+    alt-text:
     url: '#'
-    text1: Apply here
-    text2: Ipsum Lorem
+    text1:
+    text2:
 ---
 
 <div class="container slider-container sub-nav-marg">
