Updated 'baseball.html' via CloudCannon

--- a/baseball.html
+++ b/baseball.html
@@ -3,6 +3,9 @@ layout: sub-nav-landing-fb
 baseurl: ../
 title: Baseball
 base: baseball
+_options:
+  image: # Front matter field
+    uploads_dir: "uploads/baseball"
 sport: 2
 slides:
   - image: uploads/header-bg2.jpg
