Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ slides:
     url: 'http://athletics.kcc.edu/soccer'
     text1: Soccer
     text2: 2017 KCC Cavaliers Soccer
-  - image: '/uploads/#15 D3S_9915.JPG'
+  - image: /uploads/softball-15-d3s-9915.jpg
     alt-text:
     url: 'http://athletics.kcc.edu/softball'
     text1: Softball
@@ -29,7 +29,7 @@ slides:
     url: 'http://athletics.kcc.edu/volleyball'
     text1: Volleyball
     text2: KCC Volleyball vs <br>Olivet Nazarene
-  - image: /uploads/DSC_2869.jpg
+  - image: /uploads/basketball-dsc-2869.jpg
     alt-text:
     url: 'http://athletics.kcc.edu/mens-basketball'
     text1: Men's Basketball
