Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ slides:
     url: 'http://athletics.kcc.edu/volleyball'
     text1: Volleyball
     text2: KCC Volleyball vs <br>Olivet Nazarene
-  - image:
+  - image: /uploads/basketball-dsc-2869-3.jpg
     alt-text:
     url: 'http://athletics.kcc.edu/mens-basketball'
     text1: Men's Basketball
