Updated 'baseball.html' via CloudCannon

--- a/baseball.html
+++ b/baseball.html
@@ -12,11 +12,6 @@ slides:
     url: 'http://www.kcc.edu'
     text1: 'June 6, 2017 | Baseball'
     text2: 2017 NJCAA DIVISION II <br>NATIONAL CHAMPIONS
-  - image: /uploads/coachburciaga.jpg
-    alt-text:
-    url: '#'
-    text1:
-    text2: '#41 Burciaga and Coach Post'
   - image: /uploads/D72_7641.jpg
     alt-text:
     url: '#'
@@ -27,6 +22,11 @@ slides:
     url: '#'
     text1: Sophomore
     text2: Colin BeDell
+  - image: /uploads/baseball-dsc-1315.jpg
+    alt-text:
+    url:
+    text1:
+    text2:
 ---
 
 <div class="container slider-container sub-nav-marg">
