Updated 'baseball.html' via CloudCannon

--- a/baseball.html
+++ b/baseball.html
@@ -12,12 +12,12 @@ slides:
     url: 'http://www.kcc.edu'
     text1: 'June 6, 2017 | Baseball'
     text2: 2017 NJCAA DIVISION II <br>NATIONAL CHAMPIONS
-  - image: /uploads/D72_7641.jpg
+  - image: /uploads/baseball-d72-7641.jpg
     alt-text:
     url: '#'
     text1: RHP
     text2: Jake Everaert
-  - image: /uploads/DSC_1335.jpg
+  - image: /uploads/baseball-dsc-1335.jpg
     alt-text:
     url: '#'
     text1: Sophomore
