Updated 'mens-basketball.html' via CloudCannon

--- a/mens-basketball.html
+++ b/mens-basketball.html
@@ -10,12 +10,12 @@ slides:
     url: '#'
     text1: 2017-2018
     text2: Men's Basketball
-  - image: uploads/basketball-slide-5_DSC_2602.jpg
+  - image: /uploads/curtisdilworth2-1.jpg
     alt-text:
     url: '#'
     text1: Sophomore
     text2: 'Curtis Dilworth, Jr'
-  - image: /uploads/theoowens.jpg
+  - image: /uploads/theoowens-1.jpg
     alt-text:
     url: '#'
     text1: Freshman
@@ -25,11 +25,6 @@ slides:
     url: '#'
     text1: Apply here
     text2: Ipsum Lorem
-  - image: /uploads/curtisdilworth2.jpg
-    alt-text:
-    url: '#'
-    text1:
-    text2:
 ---
 
 <div class="container slider-container sub-nav-marg">
