--- a/about/survey/index.html
+++ b/about/survey/index.html
@@ -4,14 +4,16 @@ baseurl: ../../
 base: about
 title: Equity in Athletics
 ---
+
 {% include about-nav.html %}
 <main class="about-main sub-nav-marg">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="main-heading editable">Alumni Survey</h2><br>
+        <h2 class="main-heading editable">Alumni Survey</h2><br />
         <div class="editable">
-          <p>content here</P>
+            <p>&nbsp;</p>
+            <p><a target="_blank" href="https://form.jotform.com/72415108814957">Complete the Alumni Survey</a></p>
         </div>
       </div>
     </div>
