Updated 'about/staff/index.html' via CloudCannon

--- a/about/staff/index.html
+++ b/about/staff/index.html
@@ -2,14 +2,14 @@
 layout: page
 baseurl: ../../
 base: about
-title: Equity in Athletics
+title: Staff
 ---
 {% include about-nav.html %}
 <main class="about-main sub-nav-marg">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="main-heading editable">Staff Directory</h2><br>
+        <h2 class="blue-heading editable">Staff Directory</h2><br>
         <div class="editable">
           <p>Staff</p>
           <p>Todd Post<br>
