--- a/about/equity/index.html
+++ b/about/equity/index.html
@@ -10,7 +10,7 @@ title: Equity in Athletics
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="main-heading editable">Equity in Athletics</h2><br />
+        <h2 class="blue-heading editable">Equity in Athletics</h2><br />
         <div class="editable">
             <p>Any coeducational institution of higher education that participates in a federal student aid program and has an intercollegiate athletics program must publish an annual Equity in Athletics report containing participation rates, financial support, and other information on men's and women's intercollegiate athletic programs. The U.S. Department of Education uses this information to prepare its required report to Congress on gender equity in intercollegiate athletics.!</p>
             <p>Download the <a target="_blank" rel="noopener" href="../../uploads/EADA_REPORT_FOR_ATHLETICS_FY17.pdf">KCC Equity in Athletics Disclosure Act (EADA) Report.</a></p>
