Updated 'about/student-athletes/index.html' via CloudCannon

--- a/about/student-athletes/index.html
+++ b/about/student-athletes/index.html
@@ -19,7 +19,7 @@ title: Student-Athlete Experience
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="main-heading editable">
+        <h2 class="blue-heading editable">
             <strong>KCC Student-Athlete Experience</strong>
         </h2><br />
         <div class="editable">
