Updated 'about/survey/index.html' via CloudCannon

--- a/about/survey/index.html
+++ b/about/survey/index.html
@@ -10,7 +10,7 @@ title: Equity in Athletics
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="main-heading editable">Alumni Survey</h2><br />
+        <h2 class="blue-heading editable">Alumni Survey</h2><br />
         <div class="editable">
             <p>&nbsp;</p>
             <p><a target="_blank" href="https://form.jotform.com/72415108814957">Complete the Alumni Survey</a></p>
