Updated 'baseball.html' via CloudCannon

--- a/baseball.html
+++ b/baseball.html
@@ -25,8 +25,8 @@ slides:
   - image: /uploads/baseball-dsc-1315.jpg
     alt-text:
     url:
-    text1:
-    text2:
+    text1: Baseball
+    text2: Coach Post & Burciaga
 ---
 
 <div class="container slider-container sub-nav-marg">
